# cowsay-haskell

./: .gitignore  LICENSE  README.md  cowsay-haskell.cabal  cowsay.hs
